--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
 
     <color name="status_hearing">#7B1FA2</color>
     <color name="status_not_hearing">#757575</color>
+    <color name="white">#ffffff</color>
 </resources>
